fixed horizontal alignment in the quick overview

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -1006,6 +1006,7 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
 }
 .maincard-img {
     display: block;
+    min-height: 45px;
     margin: 0 auto 20px;
 }
 .maincard-title {
